weak-stl-encoder/src/main/antlr4/.antlr/STLParser.java
// Generated from /Users/rockita/Code/req-weak/stl/src/main/antlr4/STL.g4 by ANTLR 4.9.2

	package edu.cmu.stl.encoder.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class STLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, AND=11, OR=12, NOT=13, IMP=14, IFF=15, GT=16, GE=17, LT=18, LE=19, 
		MUL=20, DIV=21, ADD=22, SUB=23, ID=24, INT=25, FLOAT=26, NEWLINE=27, WS=28, 
		Comment=29, Comment2=30;
	public static final int
		RULE_prog = 0, RULE_stat = 1, RULE_stl = 2, RULE_globally = 3, RULE_weakGlobally = 4, 
		RULE_eventually = 5, RULE_weakEventually = 6, RULE_logicExpr = 7, RULE_compExpr = 8, 
		RULE_arithExpr = 9, RULE_timeBound = 10, RULE_weakLeftTimeBound = 11, 
		RULE_weakRightTimeBound = 12, RULE_weakBothTimeBound = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stat", "stl", "globally", "weakGlobally", "eventually", "weakEventually", 
			"logicExpr", "compExpr", "arithExpr", "timeBound", "weakLeftTimeBound", 
			"weakRightTimeBound", "weakBothTimeBound"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'G'", "'F'", "'='", "'<<'", "'>>'", "','", "'['", 
			"']'", "'/\\'", "'\\/'", "'not'", "'->'", "'<->'", "'>'", "'>='", "'<'", 
			"'<='", "'*'", "'/'", "'+'", "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "AND", 
			"OR", "NOT", "IMP", "IFF", "GT", "GE", "LT", "LE", "MUL", "DIV", "ADD", 
			"SUB", "ID", "INT", "FLOAT", "NEWLINE", "WS", "Comment", "Comment2"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "STL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public STLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(28);
				stat();
				}
				}
				setState(31); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__5) | (1L << NOT) | (1L << ID) | (1L << INT) | (1L << FLOAT) | (1L << NEWLINE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StlContext stl() {
			return getRuleContext(StlContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(STLParser.NEWLINE, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(38);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(33);
				stl(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				stl(0);
				setState(35);
				match(NEWLINE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(37);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StlContext extends ParserRuleContext {
		public StlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stl; }
	 
		public StlContext() { }
		public void copyFrom(StlContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StlWeakGloballyContext extends StlContext {
		public WeakGloballyContext weakGlobally() {
			return getRuleContext(WeakGloballyContext.class,0);
		}
		public StlWeakGloballyContext(StlContext ctx) { copyFrom(ctx); }
	}
	public static class StlLogicExprContext extends StlContext {
		public LogicExprContext logicExpr() {
			return getRuleContext(LogicExprContext.class,0);
		}
		public StlLogicExprContext(StlContext ctx) { copyFrom(ctx); }
	}
	public static class StlImpExprContext extends StlContext {
		public Token op;
		public List<StlContext> stl() {
			return getRuleContexts(StlContext.class);
		}
		public StlContext stl(int i) {
			return getRuleContext(StlContext.class,i);
		}
		public TerminalNode IMP() { return getToken(STLParser.IMP, 0); }
		public StlImpExprContext(StlContext ctx) { copyFrom(ctx); }
	}
	public static class StlGloballyContext extends StlContext {
		public GloballyContext globally() {
			return getRuleContext(GloballyContext.class,0);
		}
		public StlGloballyContext(StlContext ctx) { copyFrom(ctx); }
	}
	public static class StlIffExprContext extends StlContext {
		public Token op;
		public List<StlContext> stl() {
			return getRuleContexts(StlContext.class);
		}
		public StlContext stl(int i) {
			return getRuleContext(StlContext.class,i);
		}
		public TerminalNode IFF() { return getToken(STLParser.IFF, 0); }
		public StlIffExprContext(StlContext ctx) { copyFrom(ctx); }
	}
	public static class StlWeakEventuallyContext extends StlContext {
		public WeakEventuallyContext weakEventually() {
			return getRuleContext(WeakEventuallyContext.class,0);
		}
		public StlWeakEventuallyContext(StlContext ctx) { copyFrom(ctx); }
	}
	public static class StlNotExprContext extends StlContext {
		public Token op;
		public StlContext stl() {
			return getRuleContext(StlContext.class,0);
		}
		public TerminalNode NOT() { return getToken(STLParser.NOT, 0); }
		public StlNotExprContext(StlContext ctx) { copyFrom(ctx); }
	}
	public static class StlAndExprContext extends StlContext {
		public Token op;
		public List<StlContext> stl() {
			return getRuleContexts(StlContext.class);
		}
		public StlContext stl(int i) {
			return getRuleContext(StlContext.class,i);
		}
		public TerminalNode AND() { return getToken(STLParser.AND, 0); }
		public StlAndExprContext(StlContext ctx) { copyFrom(ctx); }
	}
	public static class StlOrExprContext extends StlContext {
		public Token op;
		public List<StlContext> stl() {
			return getRuleContexts(StlContext.class);
		}
		public StlContext stl(int i) {
			return getRuleContext(StlContext.class,i);
		}
		public TerminalNode OR() { return getToken(STLParser.OR, 0); }
		public StlOrExprContext(StlContext ctx) { copyFrom(ctx); }
	}
	public static class StlParenExprContext extends StlContext {
		public StlContext stl() {
			return getRuleContext(StlContext.class,0);
		}
		public StlParenExprContext(StlContext ctx) { copyFrom(ctx); }
	}
	public static class StlEventuallyContext extends StlContext {
		public EventuallyContext eventually() {
			return getRuleContext(EventuallyContext.class,0);
		}
		public StlEventuallyContext(StlContext ctx) { copyFrom(ctx); }
	}

	public final StlContext stl() throws RecognitionException {
		return stl(0);
	}

	private StlContext stl(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StlContext _localctx = new StlContext(_ctx, _parentState);
		StlContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_stl, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				_localctx = new StlParenExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(41);
				match(T__0);
				setState(42);
				stl(0);
				setState(43);
				match(T__1);
				}
				break;
			case 2:
				{
				_localctx = new StlLogicExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(45);
				logicExpr(0);
				}
				break;
			case 3:
				{
				_localctx = new StlGloballyContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(46);
				globally();
				}
				break;
			case 4:
				{
				_localctx = new StlWeakGloballyContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(47);
				weakGlobally();
				}
				break;
			case 5:
				{
				_localctx = new StlEventuallyContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(48);
				eventually();
				}
				break;
			case 6:
				{
				_localctx = new StlWeakEventuallyContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(49);
				weakEventually();
				}
				break;
			case 7:
				{
				_localctx = new StlNotExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(50);
				((StlNotExprContext)_localctx).op = match(NOT);
				setState(51);
				stl(5);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(68);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(66);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new StlAndExprContext(new StlContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_stl);
						setState(54);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(55);
						((StlAndExprContext)_localctx).op = match(AND);
						setState(56);
						stl(5);
						}
						break;
					case 2:
						{
						_localctx = new StlOrExprContext(new StlContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_stl);
						setState(57);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(58);
						((StlOrExprContext)_localctx).op = match(OR);
						setState(59);
						stl(4);
						}
						break;
					case 3:
						{
						_localctx = new StlImpExprContext(new StlContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_stl);
						setState(60);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(61);
						((StlImpExprContext)_localctx).op = match(IMP);
						setState(62);
						stl(3);
						}
						break;
					case 4:
						{
						_localctx = new StlIffExprContext(new StlContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_stl);
						setState(63);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(64);
						((StlIffExprContext)_localctx).op = match(IFF);
						setState(65);
						stl(2);
						}
						break;
					}
					} 
				}
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class GloballyContext extends ParserRuleContext {
		public Token op;
		public TimeBoundContext timeBound() {
			return getRuleContext(TimeBoundContext.class,0);
		}
		public StlContext stl() {
			return getRuleContext(StlContext.class,0);
		}
		public GloballyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globally; }
	}

	public final GloballyContext globally() throws RecognitionException {
		GloballyContext _localctx = new GloballyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_globally);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			((GloballyContext)_localctx).op = match(T__2);
			setState(72);
			timeBound();
			setState(73);
			match(T__0);
			setState(74);
			stl(0);
			setState(75);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WeakGloballyContext extends ParserRuleContext {
		public Token op;
		public WeakLeftTimeBoundContext weakLeftTimeBound() {
			return getRuleContext(WeakLeftTimeBoundContext.class,0);
		}
		public StlContext stl() {
			return getRuleContext(StlContext.class,0);
		}
		public WeakRightTimeBoundContext weakRightTimeBound() {
			return getRuleContext(WeakRightTimeBoundContext.class,0);
		}
		public WeakBothTimeBoundContext weakBothTimeBound() {
			return getRuleContext(WeakBothTimeBoundContext.class,0);
		}
		public WeakGloballyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_weakGlobally; }
	}

	public final WeakGloballyContext weakGlobally() throws RecognitionException {
		WeakGloballyContext _localctx = new WeakGloballyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_weakGlobally);
		try {
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				((WeakGloballyContext)_localctx).op = match(T__2);
				setState(78);
				weakLeftTimeBound();
				setState(79);
				match(T__0);
				setState(80);
				stl(0);
				setState(81);
				match(T__1);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				((WeakGloballyContext)_localctx).op = match(T__2);
				setState(84);
				weakRightTimeBound();
				setState(85);
				match(T__0);
				setState(86);
				stl(0);
				setState(87);
				match(T__1);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				((WeakGloballyContext)_localctx).op = match(T__2);
				setState(90);
				weakBothTimeBound();
				setState(91);
				match(T__0);
				setState(92);
				stl(0);
				setState(93);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventuallyContext extends ParserRuleContext {
		public Token op;
		public TimeBoundContext timeBound() {
			return getRuleContext(TimeBoundContext.class,0);
		}
		public StlContext stl() {
			return getRuleContext(StlContext.class,0);
		}
		public EventuallyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventually; }
	}

	public final EventuallyContext eventually() throws RecognitionException {
		EventuallyContext _localctx = new EventuallyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_eventually);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			((EventuallyContext)_localctx).op = match(T__3);
			setState(98);
			timeBound();
			setState(99);
			match(T__0);
			setState(100);
			stl(0);
			setState(101);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WeakEventuallyContext extends ParserRuleContext {
		public Token op;
		public WeakLeftTimeBoundContext weakLeftTimeBound() {
			return getRuleContext(WeakLeftTimeBoundContext.class,0);
		}
		public StlContext stl() {
			return getRuleContext(StlContext.class,0);
		}
		public WeakRightTimeBoundContext weakRightTimeBound() {
			return getRuleContext(WeakRightTimeBoundContext.class,0);
		}
		public WeakBothTimeBoundContext weakBothTimeBound() {
			return getRuleContext(WeakBothTimeBoundContext.class,0);
		}
		public WeakEventuallyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_weakEventually; }
	}

	public final WeakEventuallyContext weakEventually() throws RecognitionException {
		WeakEventuallyContext _localctx = new WeakEventuallyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_weakEventually);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				((WeakEventuallyContext)_localctx).op = match(T__3);
				setState(104);
				weakLeftTimeBound();
				setState(105);
				match(T__0);
				setState(106);
				stl(0);
				setState(107);
				match(T__1);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				((WeakEventuallyContext)_localctx).op = match(T__3);
				setState(110);
				weakRightTimeBound();
				setState(111);
				match(T__0);
				setState(112);
				stl(0);
				setState(113);
				match(T__1);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				((WeakEventuallyContext)_localctx).op = match(T__3);
				setState(116);
				weakBothTimeBound();
				setState(117);
				match(T__0);
				setState(118);
				stl(0);
				setState(119);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicExprContext extends ParserRuleContext {
		public LogicExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicExpr; }
	 
		public LogicExprContext() { }
		public void copyFrom(LogicExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AndExprContext extends LogicExprContext {
		public Token op;
		public List<LogicExprContext> logicExpr() {
			return getRuleContexts(LogicExprContext.class);
		}
		public LogicExprContext logicExpr(int i) {
			return getRuleContext(LogicExprContext.class,i);
		}
		public TerminalNode AND() { return getToken(STLParser.AND, 0); }
		public AndExprContext(LogicExprContext ctx) { copyFrom(ctx); }
	}
	public static class ImpExprContext extends LogicExprContext {
		public Token op;
		public List<LogicExprContext> logicExpr() {
			return getRuleContexts(LogicExprContext.class);
		}
		public LogicExprContext logicExpr(int i) {
			return getRuleContext(LogicExprContext.class,i);
		}
		public TerminalNode IMP() { return getToken(STLParser.IMP, 0); }
		public ImpExprContext(LogicExprContext ctx) { copyFrom(ctx); }
	}
	public static class LogicParensContext extends LogicExprContext {
		public LogicExprContext logicExpr() {
			return getRuleContext(LogicExprContext.class,0);
		}
		public LogicParensContext(LogicExprContext ctx) { copyFrom(ctx); }
	}
	public static class LogicCompExprContext extends LogicExprContext {
		public CompExprContext compExpr() {
			return getRuleContext(CompExprContext.class,0);
		}
		public LogicCompExprContext(LogicExprContext ctx) { copyFrom(ctx); }
	}
	public static class NotExprContext extends LogicExprContext {
		public Token op;
		public LogicExprContext logicExpr() {
			return getRuleContext(LogicExprContext.class,0);
		}
		public TerminalNode NOT() { return getToken(STLParser.NOT, 0); }
		public NotExprContext(LogicExprContext ctx) { copyFrom(ctx); }
	}
	public static class IffExprContext extends LogicExprContext {
		public Token op;
		public List<LogicExprContext> logicExpr() {
			return getRuleContexts(LogicExprContext.class);
		}
		public LogicExprContext logicExpr(int i) {
			return getRuleContext(LogicExprContext.class,i);
		}
		public TerminalNode IFF() { return getToken(STLParser.IFF, 0); }
		public IffExprContext(LogicExprContext ctx) { copyFrom(ctx); }
	}
	public static class OrExprContext extends LogicExprContext {
		public Token op;
		public List<LogicExprContext> logicExpr() {
			return getRuleContexts(LogicExprContext.class);
		}
		public LogicExprContext logicExpr(int i) {
			return getRuleContext(LogicExprContext.class,i);
		}
		public TerminalNode OR() { return getToken(STLParser.OR, 0); }
		public OrExprContext(LogicExprContext ctx) { copyFrom(ctx); }
	}

	public final LogicExprContext logicExpr() throws RecognitionException {
		return logicExpr(0);
	}

	private LogicExprContext logicExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LogicExprContext _localctx = new LogicExprContext(_ctx, _parentState);
		LogicExprContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_logicExpr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				_localctx = new LogicParensContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(124);
				match(T__0);
				setState(125);
				logicExpr(0);
				setState(126);
				match(T__1);
				}
				break;
			case 2:
				{
				_localctx = new NotExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(128);
				((NotExprContext)_localctx).op = match(NOT);
				setState(129);
				logicExpr(6);
				}
				break;
			case 3:
				{
				_localctx = new LogicCompExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(130);
				compExpr();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(147);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(145);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						_localctx = new AndExprContext(new LogicExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_logicExpr);
						setState(133);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(134);
						((AndExprContext)_localctx).op = match(AND);
						setState(135);
						logicExpr(6);
						}
						break;
					case 2:
						{
						_localctx = new OrExprContext(new LogicExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_logicExpr);
						setState(136);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(137);
						((OrExprContext)_localctx).op = match(OR);
						setState(138);
						logicExpr(5);
						}
						break;
					case 3:
						{
						_localctx = new ImpExprContext(new LogicExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_logicExpr);
						setState(139);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(140);
						((ImpExprContext)_localctx).op = match(IMP);
						setState(141);
						logicExpr(4);
						}
						break;
					case 4:
						{
						_localctx = new IffExprContext(new LogicExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_logicExpr);
						setState(142);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(143);
						((IffExprContext)_localctx).op = match(IFF);
						setState(144);
						logicExpr(3);
						}
						break;
					}
					} 
				}
				setState(149);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
